[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Customers/Customer.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Customers/Customer_SM.gd" type="Script" id=2]

[node name="CustomerManager" type="Spatial"]
script = ExtResource( 2 )
WAIT_TIME = 5

[node name="SpawnPosition" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.95301, 0, 0 )

[node name="DeskPosition" type="Spatial" parent="."]

[node name="ExitPosition" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.6133, 0, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="Customer_Patience_Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Customer" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30.126, 0, 0 )
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Customer_Patience_Timer" to="." method="_on_Customer_Patience_Timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
